# LevelSketch

./: .clang-format  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.zig  build.zig.zon
Scripts/: ClangFormat.bat  ClangFormat.sh
Source/: CMakeLists.txt  Main.cpp
Source/Core/: Assert.cpp  Assert.hpp  CommandLine.cpp  CommandLine.hpp  Compiler.hpp  Console.cpp  Console.hpp  Defines.hpp  Optional.hpp  Traits.hpp  Types.hpp  Version.hpp
Source/Core/Containers/: Array.hpp  Forwards.hpp  HashMap.hpp  HashMapConstants.hpp  HashSet.hpp  List.hpp  Map.hpp  Pair.hpp  RedBlackTree.hpp  String.cpp  String.hpp
Source/Core/Math/: Color.hpp  Forwards.hpp  Math.hpp  Matrix.hpp  Rect.hpp  Rotation.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  Vertex.hpp
Source/Core/Memory/: Forwards.hpp  ReferenceCount.hpp  Shareable.hpp  SharedPtr.hpp  UniquePtr.hpp  WeakPtr.hpp
Source/Core/Sort/: Insertion.hpp
Source/Engine/: Camera.cpp  Camera.hpp  Class.hpp  Engine.cpp  Engine.hpp  Type.cpp  Type.hpp  TypeDatabase.cpp  TypeDatabase.hpp
Source/Engine/Components/: Mesh.hpp  Transform.hpp
Source/Engine/ECS/: Archetype.hpp  Component.cpp  Component.hpp  ComponentPool.cpp  ComponentPool.hpp  Entity.cpp  Entity.hpp  World.cpp  World.hpp
Source/GUI/: GUI.cpp  GUI.hpp
Source/Main/: Common.cpp  Common.hpp  Main.mm
Source/Platform/: Debugger.cpp  Debugger.hpp  Event.hpp  EventQueue.cpp  EventQueue.hpp  FileSystem.cpp  FileSystem.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  Mutex.cpp  Mutex.hpp  Platform.cpp  Platform.hpp  Window.cpp  Window.hpp  WindowDescription.hpp
Source/Platform/Linux/: Platform.cpp  Platform.hpp
Source/Platform/Mac/: DisplayLink.hpp  DisplayLink.mm  EventView.hpp  EventView.mm  FileSystem.mm  Info.plist  MainMenu.storyboard  Mouse.mm  Platform.cpp  Platform.hpp  Platform.mm  Window.hpp  Window.mm  WindowBridge.hpp  WindowBridge.mm
Source/Platform/SDL2/: FileSystem.cpp  Mouse.cpp  Platform.cpp  Platform.hpp  Window.cpp  Window.hpp
Source/Platform/Windows/: Common.hpp  Debugger.cpp  Debugger.hpp  Errors.cpp  Errors.hpp  Events.cpp  Events.hpp  FileSystem.cpp  Mouse.cpp  Mutex.cpp  Mutex.hpp  Platform.cpp  Platform.hpp  Window.cpp  Window.hpp
Source/Render/: GraphicsPipelineDescription.hpp  Handle.hpp  Renderer.cpp  Renderer.hpp  ShaderDescription.hpp  TextureDescription.hpp  VertexBufferDescription.hpp  VertexDataDescription.hpp  VertexDescription.hpp  VertexFormat.hpp  ViewportRect.hpp
Source/Render/DirectX/: Adapter.cpp  Adapter.hpp  CommandAllocator.cpp  CommandAllocator.hpp  CommandList.cpp  CommandList.hpp  CommandQueue.cpp  CommandQueue.hpp  DepthStencil.cpp  DepthStencil.hpp  DescriptorHeap.cpp  DescriptorHeap.hpp  Device.cpp  Device.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  InfoQueue.cpp  InfoQueue.hpp  RenderBuffer.cpp  RenderBuffer.hpp  Renderer.cpp  Renderer.hpp  RootSignature.cpp  RootSignature.hpp  Shader.cpp  Shader.hpp  SwapChain.cpp  SwapChain.hpp  Texture.cpp  Texture.hpp  Utility.cpp  Utility.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Viewport.cpp  Viewport.hpp
Source/Render/Metal/: CommandBuffer.hpp  CommandBuffer.mm  CommandEncoder.hpp  CommandEncoder.mm  CommandQueue.hpp  CommandQueue.mm  DepthStencil.hpp  DepthStencil.mm  Device.hpp  Device.mm  GraphicsPipeline.hpp  GraphicsPipeline.mm  RenderBridge.hpp  RenderBridge.mm  RenderBuffer.hpp  RenderBuffer.mm  Renderer.hpp  Renderer.mm  Shader.hpp  Shader.mm  Texture.hpp  Texture.mm  VertexBuffer.hpp  VertexBuffer.mm  View.hpp  View.mm  ViewController.hpp  ViewController.mm
Source/Render/OpenGL/: Extensions.cpp  Extensions.hpp  Renderer.cpp  Renderer.hpp  SDL2Renderer.cpp  SDL2Renderer.hpp
Source/Render/Vulkan/: Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  DebugUtils.cpp  DebugUtils.hpp  DescriptorPool.cpp  DescriptorPool.hpp  Device.cpp  Device.hpp  Errors.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Loader.cpp  Loader.hpp  LogicalDevice.cpp  LogicalDevice.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Queue.cpp  Queue.hpp  QueueFamily.hpp  RenderBuffer.cpp  RenderBuffer.hpp  Renderer.cpp  Renderer.hpp  Sampler.cpp  Sampler.hpp  Shader.cpp  Shader.hpp  Surface.cpp  Surface.hpp  SurfaceX11.cpp  SurfaceX11.hpp  SwapChain.cpp  SwapChain.hpp  Sync.cpp  Sync.hpp  (+10 more)
Source/Tests/: System.cpp  System.hpp  TestSuite.cpp  TestSuite.hpp  Utility.hpp
Source/Tests/Core/: Array.cpp  CommandLine.cpp  Core.hpp  HashMap.cpp  HashSet.cpp  List.cpp  Map.cpp  Math.cpp  Optional.cpp  RedBlackTree.cpp  Shareable.cpp  SharedPtr.cpp  Sort.cpp  String.cpp  UniquePtr.cpp  WeakPtr.cpp
Source/Tests/Engine/: Class.cpp  ECS.cpp  Engine.hpp  TypeDatabase.cpp
Source/Tests/Platform/: FileSystem.cpp  Platform.hpp
assets/shaders/: common_fragment.sc  common_vertex.sc  phong_fragment.sc  text_fragment.sc
crates/kea/: Cargo.toml
crates/lstalk/: Cargo.toml
src/: Cursor.zig  GUI.zig  callbacks.zig  camera.rs  glfw.zig  lsp.rs  main.rs  main.zig  menus.rs  svg.rs
src/app/: State.zig  root.zig
src/commands/: clone.rs  extension.rs  mod.rs
src/core/: commandline.zig  root.zig
src/editor/: components.zig  events.zig  resources.zig  root.zig  systems.zig
src/entitiy/: data.rs  mod.rs  property.rs
src/extensions/: mod.rs  val.rs
src/gui/: Clay.zig  ClayContext.zig  ClayLayout.zig  Cursor.zig  GUI.zig  State.zig  Theme.zig  buttonex.rs  droppable.rs  icons.rs  item.rs  menu.rs  mod.rs  panel.rs  root.zig  sizer.rs  style.rs  trail.rs  viewport.rs
src/io/: LineReader.zig  obj.zig  pnm.zig  root.zig
src/level/: commands.rs  events.rs  level.rs  mod.rs  systems.rs
src/platform/: Window.zig  glfw.zig  root.zig
src/project/: lsp.rs  mod.rs  project.rs
src/render/: Atlas.zig  Camera.zig  Commands.zig  Font.zig  Fonts.zig  MemFactory.zig  Mesh.zig  Meshes.zig  RenderBuffer.zig  Renderer.zig  Texture.zig  Textures.zig  Vertex.zig  View.zig  root.zig  shapes.zig  vertex_buffer.zig
src/settings/: app.rs  mod.rs  resource.rs
src/shapes/: annulus_sector.rs  mod.rs
src/tools/: constants.rs  mod.rs  selection.rs
src/world/: Camera.zig  (+9 more)
(+218 files in other folders)
