[package]
name = "levelsketch"
description = "A generic 3D level editor written in Rust using Bevy."
version = "0.1.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/mdavisprog/LevelSketch"
repository = "https://github.com/mdavisprog/LevelSketch"
license-file = "LICENSE"
publish = false

[dependencies]
bevy = "=0.16.0"
resvg = "=0.45.0"
bitflags = "=2.8.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
