[package]
name = "levelsketch"
description = "A generic 3D level editor written in Rust using Bevy."
version = "0.2.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/mdavisprog/LevelSketch"
repository = "https://github.com/mdavisprog/LevelSketch"
license-file = "LICENSE"
publish = false

[workspace]
resolver = "3"
members = [
    "crates/kea"
]

[dependencies]
bevy = "=0.16.0"
resvg = "=0.45.0"
bitflags = "=2.8.0"
kea = { path = "crates/kea" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
